// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast gets geometry quad symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 0,
      "flags": 0,
      "identifiers": undefined,
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
    Object {
      "at": 102,
      "flags": 1,
      "func": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "QUAD",
      ],
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "at": 176,
      "flags": 1,
      "func": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getQuadIndex",
      ],
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "exports": Array [
    Object {
      "at": 102,
      "flags": 1,
      "func": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "QUAD",
      ],
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "at": 176,
      "flags": 1,
      "func": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getQuadIndex",
      ],
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "QUAD",
    "getQuadIndex",
    "getQuadUV",
  ],
  "visibles": Array [
    "getQuadIndex",
    "getQuadUV",
  ],
}
`;

exports[`ast gets quad vertex declarations 1`] = `
Array [
  Object {
    "at": 175,
    "flags": 0,
    "func": Object {
      "name": "getPosition",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getPosition",
    ],
  },
  Object {
    "at": 198,
    "flags": 0,
    "func": Object {
      "name": "getColor",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getColor",
    ],
  },
  Object {
    "at": 218,
    "flags": 0,
    "func": Object {
      "name": "getSize",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getSize",
    ],
  },
  Object {
    "at": 237,
    "flags": 0,
    "func": Object {
      "name": "getDepth",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getDepth",
    ],
  },
]
`;

exports[`ast gets quad vertex functions 1`] = `
Array [
  Object {
    "at": 274,
    "flags": 1,
    "func": Object {
      "name": "getQuadVertex",
      "parameters": Array [
        "int",
        "vertexIndex",
      ],
      "type": Object {
        "name": "SolidVertex",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [
      "SolidVertex",
      "vertexIndex",
      "instanceIndex",
      "position",
      "getPosition",
      "instanceIndex",
      "color",
      "getColor",
      "size",
      "getSize",
      "depth",
      "getDepth",
      "center",
      "worldToClip",
      "uv",
      "getQuadUV",
      "vertexIndex",
      "xy",
      "pixelScale",
      "getPerspectiveScale",
      "viewUniforms",
      "SolidVertex",
    ],
    "symbols": Array [
      "getQuadVertex",
    ],
  },
]
`;

exports[`ast gets quad vertex imports 1`] = `
Array [
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "SolidVertex",
        "name": "SolidVertex",
      },
    ],
    "name": "use/types",
    "symbols": Array [
      "SolidVertex",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
      Object {
        "imported": "getPerspectiveScale",
        "name": "getPerspectiveScale",
      },
    ],
    "name": "use/view",
    "symbols": Array [
      "viewUniforms",
      "worldToClip",
      "getPerspectiveScale",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast gets quad vertex symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 175,
      "flags": 0,
      "func": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "at": 198,
      "flags": 0,
      "func": Object {
        "name": "getColor",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getColor",
      ],
    },
    Object {
      "at": 218,
      "flags": 0,
      "func": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "at": 237,
      "flags": 0,
      "func": Object {
        "name": "getDepth",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getDepth",
      ],
    },
    Object {
      "at": 274,
      "flags": 1,
      "func": Object {
        "name": "getQuadVertex",
        "parameters": Array [
          "int",
          "vertexIndex",
        ],
        "type": Object {
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getPosition",
        "getColor",
        "getSize",
        "getDepth",
      ],
      "symbols": Array [
        "getQuadVertex",
      ],
    },
  ],
  "exports": Array [
    Object {
      "at": 274,
      "flags": 1,
      "func": Object {
        "name": "getQuadVertex",
        "parameters": Array [
          "int",
          "vertexIndex",
        ],
        "type": Object {
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getPosition",
        "getColor",
        "getSize",
        "getDepth",
      ],
      "symbols": Array [
        "getQuadVertex",
      ],
    },
  ],
  "externals": Array [
    Object {
      "at": 175,
      "flags": 0,
      "func": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "at": 198,
      "flags": 0,
      "func": Object {
        "name": "getColor",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getColor",
      ],
    },
    Object {
      "at": 218,
      "flags": 0,
      "func": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "at": 237,
      "flags": 0,
      "func": Object {
        "name": "getDepth",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": undefined,
      "symbols": Array [
        "getDepth",
      ],
    },
  ],
  "globals": undefined,
  "linkable": Object {
    "getColor": true,
    "getDepth": true,
    "getPosition": true,
    "getSize": true,
  },
  "modules": Array [
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "SolidVertex",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
        Object {
          "imported": "getPerspectiveScale",
          "name": "getPerspectiveScale",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
        "getPerspectiveScale",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "symbols": Array [
    "getPosition",
    "getColor",
    "getSize",
    "getDepth",
    "getQuadVertex",
  ],
  "visibles": Array [
    "getQuadVertex",
  ],
}
`;

exports[`ast gets shake information for geometry/quad AST 1`] = `
Array [
  Array [
    0,
    Array [
      0,
      1,
      2,
    ],
  ],
  Array [
    102,
    Array [
      1,
      2,
    ],
  ],
  Array [
    176,
    Array [
      2,
    ],
  ],
]
`;

exports[`ast gets shake information for getQuadVertex AST 1`] = `
Array [
  Array [
    175,
    Array [
      0,
      4,
    ],
  ],
  Array [
    198,
    Array [
      1,
      4,
    ],
  ],
  Array [
    218,
    Array [
      2,
      4,
    ],
  ],
  Array [
    237,
    Array [
      3,
      4,
    ],
  ],
  Array [
    274,
    Array [
      4,
    ],
  ],
]
`;

exports[`ast gets shake information for use/types AST 1`] = `
Array [
  Array [
    15,
    Array [
      0,
    ],
  ],
  Array [
    97,
    Array [
      1,
    ],
  ],
]
`;

exports[`ast gets solid fragment declarations 1`] = `
Array [
  Object {
    "at": 54,
    "flags": 0,
    "func": Object {
      "name": "getFragment",
      "parameters": Array [
        "vec4",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getFragment",
    ],
  },
  Object {
    "at": 103,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragIndex",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragIndex",
        },
      ],
      "type": Object {
        "name": "uint",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
          "flat",
        ],
      },
    },
  },
  Object {
    "at": 148,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "uvec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
  Object {
    "at": 195,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
        ],
      },
    },
  },
  Object {
    "at": 235,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragUV",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
  Object {
    "at": 273,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "x",
      "y",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "x",
        },
        Object {
          "expr": null,
          "name": "y",
        },
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
  },
  Object {
    "at": 25,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "a",
      "b",
      "c",
      "d",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "3",
          "name": "a",
        },
        Object {
          "expr": "1",
          "name": "b",
        },
        Object {
          "expr": null,
          "name": "c",
        },
        Object {
          "expr": null,
          "name": "d",
        },
      ],
      "type": Object {
        "name": "int",
        "qualifiers": Array [],
      },
    },
  },
]
`;

exports[`ast gets test declarations with array 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "QUAD",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "ivec2(0, 0)",
          "name": "QUAD",
        },
      ],
      "type": Object {
        "name": "ivec2",
        "qualifiers": Array [
          "const",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations with qualified declaration 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "symbols": Array [
      "unknown",
    ],
  },
  Object {
    "at": 42,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [],
    "variable": Object {
      "locals": Array [],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
]
`;

exports[`ast gets use types symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "symbols": Array [
        "SolidVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
    },
    Object {
      "at": 97,
      "flags": 1,
      "identifiers": undefined,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "normal",
              "type": Object {
                "name": "vec3",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "exports": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "symbols": Array [
        "SolidVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
    },
    Object {
      "at": 97,
      "flags": 1,
      "identifiers": undefined,
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "normal",
              "type": Object {
                "name": "vec3",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "SolidVertex",
    "MeshVertex",
  ],
  "visibles": Array [
    "SolidVertex",
    "MeshVertex",
  ],
}
`;

exports[`ast gets use view declarations 1`] = `
Array [
  Object {
    "at": 15,
    "flags": 1,
    "identifiers": Array [
      "VIEW_BINDGROUP",
      "VIEW_BINDING",
    ],
    "struct": Object {
      "name": "viewUniforms",
      "struct": Object {
        "members": Array [
          Object {
            "name": "projectionMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewPosition",
            "type": Object {
              "name": "vec4",
            },
          },
          Object {
            "name": "viewResolution",
            "type": Object {
              "name": "vec2",
            },
          },
          Object {
            "name": "viewSize",
            "type": Object {
              "name": "vec2",
            },
          },
          Object {
            "name": "viewWorldDepth",
            "type": Object {
              "name": "float",
            },
          },
          Object {
            "name": "viewPixelRatio",
            "type": Object {
              "name": "float",
            },
          },
        ],
      },
      "type": Object {
        "name": "ViewUniforms",
        "qualifiers": Array [
          "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
          "uniform",
        ],
      },
    },
    "symbols": Array [
      "viewUniforms",
      "ViewUniforms",
    ],
  },
]
`;

exports[`ast gets use view symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewSize",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewWorldDepth",
              "type": Object {
                "name": "float",
              },
            },
            Object {
              "name": "viewPixelRatio",
              "type": Object {
                "name": "float",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
    Object {
      "at": 276,
      "flags": 1,
      "func": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "at": 373,
      "flags": 1,
      "func": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "at": 475,
      "flags": 1,
      "func": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "at": 571,
      "flags": 1,
      "func": Object {
        "name": "clipToScreen3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "clipToScreen3D",
      ],
    },
    Object {
      "at": 690,
      "flags": 1,
      "func": Object {
        "name": "screenToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "screenToClip3D",
      ],
    },
    Object {
      "at": 815,
      "flags": 1,
      "func": Object {
        "name": "worldToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip3D",
      ],
    },
    Object {
      "at": 953,
      "flags": 1,
      "func": Object {
        "name": "getPerspectiveScale",
        "parameters": Array [
          "float",
          "w",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "getPerspectiveScale",
      ],
    },
  ],
  "exports": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": undefined,
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewSize",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewWorldDepth",
              "type": Object {
                "name": "float",
              },
            },
            Object {
              "name": "viewPixelRatio",
              "type": Object {
                "name": "float",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
    Object {
      "at": 276,
      "flags": 1,
      "func": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "at": 373,
      "flags": 1,
      "func": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "at": 475,
      "flags": 1,
      "func": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "at": 571,
      "flags": 1,
      "func": Object {
        "name": "clipToScreen3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "clipToScreen3D",
      ],
    },
    Object {
      "at": 690,
      "flags": 1,
      "func": Object {
        "name": "screenToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "screenToClip3D",
      ],
    },
    Object {
      "at": 815,
      "flags": 1,
      "func": Object {
        "name": "worldToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip3D",
      ],
    },
    Object {
      "at": 953,
      "flags": 1,
      "func": Object {
        "name": "getPerspectiveScale",
        "parameters": Array [
          "float",
          "w",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "getPerspectiveScale",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "linkable": undefined,
  "modules": undefined,
  "symbols": Array [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
  "visibles": Array [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
}
`;

exports[`ast rewrites a lot of code using the compressed AST 1`] = `
Array [
  Array [
    1,
    1,
    46,
  ],
  Array [
    0,
    47,
    79,
  ],
  Array [
    2,
    0,
    11,
  ],
  Array [
    2,
    12,
    21,
  ],
  Array [
    0,
    40,
    85,
  ],
  Array [
    2,
    7,
    15,
  ],
  Array [
    2,
    28,
    37,
  ],
  Array [
    0,
    17,
    57,
  ],
  Array [
    2,
    7,
    15,
  ],
  Array [
    2,
    23,
    32,
  ],
  Array [
    0,
    11,
    48,
  ],
  Array [
    2,
    7,
    15,
  ],
  Array [
    2,
    23,
    29,
  ],
  Array [
    0,
    16,
    300,
  ],
  Array [
    2,
    5,
    9,
  ],
  Array [
    2,
    15,
    26,
  ],
  Array [
    2,
    14,
    28,
  ],
  Array [
    2,
    22,
    35,
  ],
  Array [
    2,
    16,
    32,
  ],
  Array [
    2,
    21,
    32,
  ],
  Array [
    2,
    12,
    13,
  ],
  Array [
    2,
    4,
    13,
  ],
  Array [
    2,
    10,
    21,
  ],
  Array [
    2,
    13,
    26,
  ],
  Array [
    2,
    19,
    30,
  ],
  Array [
    2,
    14,
    15,
  ],
  Array [
    2,
    2,
    10,
  ],
  Array [
    2,
    30,
    39,
  ],
  Array [
    2,
    17,
    30,
  ],
  Array [
    2,
    24,
    33,
  ],
  Array [
    2,
    12,
    13,
  ],
  Array [
    2,
    2,
    7,
  ],
  Array [
    2,
    9,
    15,
  ],
  Array [
    2,
    9,
    10,
  ],
  Array [
    2,
    2,
    4,
  ],
]
`;

exports[`ast rewrites a lot of code using the compressed AST 2`] = `
Object {
  "__nodes": Array [
    Array [
      1,
      1,
      46,
    ],
    Array [
      0,
      47,
      79,
    ],
    Array [
      2,
      0,
      11,
    ],
    Array [
      2,
      12,
      21,
    ],
    Array [
      0,
      40,
      85,
    ],
    Array [
      2,
      7,
      15,
    ],
    Array [
      2,
      28,
      37,
    ],
    Array [
      0,
      17,
      57,
    ],
    Array [
      2,
      7,
      15,
    ],
    Array [
      2,
      23,
      32,
    ],
    Array [
      0,
      11,
      48,
    ],
    Array [
      2,
      7,
      15,
    ],
    Array [
      2,
      23,
      29,
    ],
    Array [
      0,
      16,
      300,
    ],
    Array [
      2,
      5,
      9,
    ],
    Array [
      2,
      15,
      26,
    ],
    Array [
      2,
      14,
      28,
    ],
    Array [
      2,
      22,
      35,
    ],
    Array [
      2,
      16,
      32,
    ],
    Array [
      2,
      21,
      32,
    ],
    Array [
      2,
      12,
      13,
    ],
    Array [
      2,
      4,
      13,
    ],
    Array [
      2,
      10,
      21,
    ],
    Array [
      2,
      13,
      26,
    ],
    Array [
      2,
      19,
      30,
    ],
    Array [
      2,
      14,
      15,
    ],
    Array [
      2,
      2,
      10,
    ],
    Array [
      2,
      30,
      39,
    ],
    Array [
      2,
      17,
      30,
    ],
    Array [
      2,
      24,
      33,
    ],
    Array [
      2,
      12,
      13,
    ],
    Array [
      2,
      2,
      7,
    ],
    Array [
      2,
      9,
      15,
    ],
    Array [
      2,
      9,
      10,
    ],
    Array [
      2,
      2,
      4,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast rewrites code using the AST 1`] = `
"
    float _zz_getValue(int index);
    void entryPoint() {
      float x = 3.0;
      float y = _zz_getValue(2);
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
Array [
  Array [
    0,
    5,
    31,
  ],
  Array [
    2,
    6,
    14,
  ],
  Array [
    2,
    13,
    18,
  ],
  Array [
    0,
    12,
    108,
  ],
  Array [
    2,
    5,
    9,
  ],
  Array [
    2,
    21,
    22,
  ],
  Array [
    2,
    21,
    22,
  ],
  Array [
    2,
    4,
    12,
  ],
  Array [
    2,
    24,
    25,
  ],
  Array [
    2,
    9,
    10,
  ],
  Array [
    2,
    2,
    5,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
Object {
  "__nodes": Array [
    Array [
      0,
      5,
      31,
    ],
    Array [
      2,
      6,
      14,
    ],
    Array [
      2,
      13,
      18,
    ],
    Array [
      0,
      12,
      108,
    ],
    Array [
      2,
      5,
      9,
    ],
    Array [
      2,
      21,
      22,
    ],
    Array [
      2,
      21,
      22,
    ],
    Array [
      2,
      4,
      12,
    ],
    Array [
      2,
      24,
      25,
    ],
    Array [
      2,
      9,
      10,
    ],
    Array [
      2,
      2,
      5,
    ],
  ],
  "cursor": [Function],
}
`;

exports[`ast shakes simple program 1`] = `
Array [
  Array [
    1,
    Array [
      0,
      1,
      2,
    ],
  ],
  Array [
    38,
    Array [
      1,
    ],
  ],
  Array [
    83,
    Array [
      2,
    ],
  ],
]
`;

exports[`ast shakes simple program 2`] = `
"
const float x = 1.0;

float getA() {
  return x;
}

"
`;

exports[`ast shakes struct type args 1`] = `
Array [
  Array [
    1,
    Array [
      0,
      1,
    ],
  ],
  Array [
    57,
    Array [
      1,
    ],
  ],
]
`;

exports[`ast shakes struct type args 2`] = `
"
struct VertexOutput {
  vec4 position;
  vec4 color;
};
vec4 main(VertexOutput arg) { return arg.color; }
    "
`;

exports[`ast shakes use/view AST 1`] = `
Array [
  Array [
    15,
    Array [
      0,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
      1,
    ],
  ],
  Array [
    276,
    Array [
      2,
      4,
      7,
    ],
  ],
  Array [
    373,
    Array [
      3,
      4,
      7,
    ],
  ],
  Array [
    475,
    Array [
      4,
    ],
  ],
  Array [
    571,
    Array [
      5,
    ],
  ],
  Array [
    690,
    Array [
      6,
    ],
  ],
  Array [
    815,
    Array [
      7,
    ],
  ],
  Array [
    953,
    Array [
      8,
    ],
  ],
]
`;

exports[`ast shakes use/view AST 2`] = `
"layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING) uniform ViewUniforms {
  mat4 projectionMatrix;
  mat4 viewMatrix;
  vec4 viewPosition;
  vec2 viewResolution;
  vec2 viewSize;
  float viewWorldDepth;
  float viewPixelRatio;
} viewUniforms;

vec4 worldToView(vec4 position) {
  return viewUniforms.viewMatrix * position;
}

vec4 viewToClip(vec4 position) {
  return viewUniforms.projectionMatrix * position;
}

vec4 worldToClip(vec4 position) {
  return viewToClip(worldToView(position));
}

"
`;

exports[`ast shakes use/view AST using compressed AST 1`] = `
Array [
  Array [
    15,
    Array [
      0,
      2,
      4,
      7,
      3,
      5,
      6,
      8,
      1,
    ],
  ],
  Array [
    276,
    Array [
      2,
      4,
      7,
    ],
  ],
  Array [
    373,
    Array [
      3,
      4,
      7,
    ],
  ],
  Array [
    475,
    Array [
      4,
    ],
  ],
  Array [
    571,
    Array [
      5,
    ],
  ],
  Array [
    690,
    Array [
      6,
    ],
  ],
  Array [
    815,
    Array [
      7,
    ],
  ],
  Array [
    953,
    Array [
      8,
    ],
  ],
]
`;
